Refactoring code of mechanism to take and store photo. Now the photos are stored in three sizes: thumbnail (102X102), medium (1024X768) and large (full size from device camera).